
[tool.poetry]
name = "online-bank-app"
version = "0.1.0"
description = ""
authors = ["Maria Zhiganova <my.nik.mariann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"
requests = "^2.32.3"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.14.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119
